HTML Menu de navegacion

--- a/index.html
+++ b/index.html
@@ -18,6 +18,108 @@
     <div class="layout">
 
         <!--MENU-->
+        <section class="layout__menu">
+            <div class="menu__navbar">
+                
+                <!--LOGO-->
+                <div class="navbar__logo">
+                    <a href="#" class="navbar__link-logo">
+                        <img src="./assets/img/logo1.png" class="navvbar__logo-light">
+                    </a>
+                </div>
+
+                <!--NAVEGACION-->
+                <nav class="navbar__nav">
+                    <ul class="nav__list">
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__title">Inicio</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__title">
+                                Servicios
+                                <i class="fa-solid fa-chevron-down nav__icon"></i>
+                            </a>
+                            <ul class="nav__submenu">
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Diseño Web</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Desarrollo Web</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Desarrollo de Apps</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Programación</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Consultoría</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__title">
+                                Servicios
+                                <i class="fa-solid fa-chevron-down nav__icon"></i>
+                            </a>
+                            <ul class="nav__submenu">
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Portafolio</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Desarrollo Web</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Desarrollo de Apps</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Programación</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Consultoría</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__title">
+                                Servicios
+                                <i class="fa-solid fa-chevron-down nav__icon"></i>
+                            </a>
+                            <ul class="nav__submenu">
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Blog</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Desarrollo Web</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Desarrollo de Apps</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Programación</a>
+                                </li>
+                                <li class="submenu__item">
+                                    <a href="#" class="submenu__title">Consultoría</a>
+                                </li>
+                            </ul>
+                        </li>
+                        
+                        <li class="nav__item">
+                            <a href="#" class="nav__title">Equipo</a>
+                        </li>
+
+                        <li class="nav__item">
+                            <a href="#" class="nav__title">Contacto</a>
+                        </li>                        
+
+                    </ul>
+                </nav>
+            </div>
+        </section>
 
         <!--BANNER-->
 
