--- a/index.html
+++ b/index.html
@@ -489,6 +489,83 @@
         </section>
 
         <!--RESEÑAS-->
+        <section class="layout__reviews">
+            <div class="reviews__grid">
+                <header class="reviews__header">
+                    <h4 class="reviews__subtitle">Reseñas</h4>
+                    <h2 class="reviews__title">¿Que dicen nuestros clientes?</h2>
+                    <p class="reviews__description">
+                        Nuestros clientes siempre salen satisfechos con sus web y apps.
+                    </p>
+                </header>
+
+                <div class="reviews__container">
+                    <article class="reviews__review">
+                        <span class="review__company">
+                            <img class="review__img" src="./assets/img/google-2.png">
+                        </span>
+                        <p class="review__description">
+                            "En Google podrás buscar todo, lo que necesites es importante saber manejarlo con soltura, será muy util a la hora de buscar errores."
+                        </p>
+                        <div class="review__author">
+                            <div class="author__container-img">
+                                <img class="author__img" src="./assets/img/testimonial-2.png" alt="Foto de usuario">
+                            </div>
+                            <div class="author__content">
+                                <span class="author__name">Victor Robles</span>
+                                <span class="author__description">Desarrollador Web</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="reviews__review">
+                        <span class="review__company">
+                            <img class="review__img" src="./assets/img/udemy.png">
+                        </span>
+                        <p class="review__description">
+                            "Tengo muchos cursos de programación y desarrollo web para empezar desde 0 hasta convertirte en profesional."
+                        </p>
+                        <div class="review__author">
+                            <div class="author__container-img">
+                                <img class="author__img" src="./assets/img/testimonial-2.png" alt="Foto de usuario">
+                            </div>
+                            <div class="author__content">
+                                <span class="author__name">Victor Robles</span>
+                                <span class="author__description">Desarrollador Web</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="reviews__review">
+                        <span class="review__company">
+                            <img class="review__img" src="./assets/img/youtube.png">
+                        </span>
+                        <p class="review__description">
+                            "En YouTube tengo todo tipos de videos que te seràn de ayuda, desde conceptos báscicos, problemas del día a día, hasta cosas más avanzadas."
+                        </p>
+                        <div class="review__author">
+                            <div class="author__container-img">
+                                <img class="author__img" src="./assets/img/testimonial-2.png" alt="Foto de usuario">
+                            </div>
+                            <div class="author__content">
+                                <span class="author__name">Victor Robles</span>
+                                <span class="author__description">Desarrollador Web</span>
+                            </div>
+                        </div>
+                    </article>
+                </div>                
+                
+            </div>
+
+            <ul class="reviews__review-shapes">
+                <li class="review-shapes__item review-shapes--shape1">
+                    <div class="review-shapes__container">
+                        <img  class="review-shapes__img" src="./assets/img/bubble-1.png">
+                    </div>
+                </li>
+            </ul>
+            
+        </section>
 
         <!--CLIENTES-->
 
