--- a/index.html
+++ b/index.html
@@ -607,6 +607,89 @@
         </section>
 
         <!--NOTICIAS-->
+        <section class="layout__news">
+            <div class="news__container">
+                <header class="news__header">
+                    <h4 class="news__subtitle">¿Qué está pasando?</h4>
+                    <h2 class="news__title">Últimas noticias</h2>
+                    <p class="news__description">
+                        Novedades sobre el desarrollo web, desarrollo móvil y diseño
+                    </p>
+                </header>
+
+                <div class="news__list">
+                    <article class="news__new">
+                        <div class="new__container-img">
+                            <img class="new__img" src="./assets/img/story-1.jpg" alt="Noticia 1">
+                        </div>
+
+                        <div class="new__content">
+                            <h3 class="new__title">
+                                <a href="#" class="new__link">
+                                    Como maquetar una web con HTML5 y CSS3
+                                </a>
+                                <p class="new__description">
+                                    ¿Quieres dar tus primeros pasos en el desarrollo web y aprender a crear webs espectaculares?
+                                </p>
+
+                                <a href="#" class="new__more">
+                                    Leer más
+                                    <i class="fa-solid fa-chevron-right new__icon"></i>
+                                </a>
+                            </h3>
+                        </div>
+                    </article>
+
+                    <article class="news__new">
+                        <div class="new__container-img">
+                            <img class="new__img" src="./assets/img/story-2.jpg" alt="Noticia 2">
+                        </div>
+
+                        <div class="new__content">
+                            <h3 class="new__title">
+                                <a href="#" class="new__link">
+                                    CAprender a programar con JavaScript
+                                </a>
+                                <p class="new__description">
+                                    ¿Quieres dar tus primeros pasos en el lado del cliente?
+                                </p>
+
+                                <a href="#" class="new__more">
+                                    Leer más
+                                    <i class="fa-solid fa-chevron-right new__icon"></i>
+                                </a>
+                            </h3>
+                        </div>
+                    </article>
+                </div>
+            </div>
+
+            <ul class="news__new-shapes">
+                <li class="new-shapes__item new-shapes--shape1">
+                    <div class="new-shapes__container">
+                        <img  class="new-shapes__img" src="./assets/img/bubble-1.png">
+                    </div>
+                </li>
+
+                <li class="new-shapes__item new-shapes--shape2">
+                    <div class="new-shapes__container">
+                        <img  class="new-shapes__img" src="./assets/img/line-1.png">
+                    </div>
+                </li>
+
+                <li class="new-shapes__item new-shapes--shape3">
+                    <div class="new-shapes__container">
+                        <img  class="new-shapes__img" src="./assets/img/line-2.png">
+                    </div>
+                </li>
+
+                <li class="new-shapes__item new-shapes--shape4">
+                    <div class="new-shapes__container">
+                        <img  class="new-shapes__img" src="./assets/img/bubble-2.png">
+                    </div>
+                </li>
+            </ul>
+        </section>
 
         <!--CONTACTO-->
         
