--- a/index.html
+++ b/index.html
@@ -692,6 +692,59 @@
         </section>
 
         <!--CONTACTO-->
+        <section class="layout__contact">
+            <div class="contact__container">
+                <header class="contact__header">
+                    <h4 class="contact__subtitle">Trabajemos juntos</h4>
+                    <h2 class="contcat__title">¿Creamos tu nuevo proyecto?</h2>
+
+                    <a class="contact__btn" href="#">Pedir presupuesto</a>
+                </header>
+
+                <div class="contact__images">
+                    <div class="contact__thumb">
+                        <img class="contact__img" src="./assets/img/chat-group.png">
+                    </div>
+                    <div class="contact__thumb contact__thumb--laptop">
+                        <img class="contact__img" src="./assets/img/laptop-poses.png">
+                    </div>
+
+                    <div class="contact__thumb contact__thumb--mobile">
+                        <img class="contact__img" src="./assets/img/men-mobile.png">
+                    </div>
+                </div>
+            </div>
+
+            <ul class="contact__backshapes">
+                <li class="backshapes__item backshapes--shape1">                    
+                    <img  class="backshapes__img" src="./assets/img/bubble-12.png">                    
+                </li>   
+                
+                <li class="backshapes__item backshapes--shape2">                    
+                    <img  class="backshapes__img" src="./assets/img/bubble-16.png">                    
+                </li> 
+
+                <li class="backshapes__item backshapes--shape3">                    
+                    <img  class="backshapes__img" src="./assets/img/bubble-13.png">                    
+                </li> 
+
+                <li class="backshapes__item backshapes--shape4">                    
+                    <img  class="backshapes__img" src="./assets/img/bubble-14.png">                    
+                </li> 
+
+                <li class="backshapes__item backshapes--shape5">                    
+                    <img  class="backshapes__img" src="./assets/img/bubble-16.png">                    
+                </li> 
+
+                <li class="backshapes__item backshapes--shape6">                    
+                    <img  class="backshapes__img" src="./assets/img/bubble-15.png">                    
+                </li> 
+
+                <li class="backshapes__item backshapes--shape7">                    
+                    <img  class="backshapes__img" src="./assets/img/bubble-16.png">                    
+                </li> 
+            </ul>
+        </section>
         
         <!--FOOTER-->
 
