CSS logo y menu

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                         <li class="nav__item">
                             <a href="#" class="nav__title">
-                                Servicios
+                                Portafolio
                                 <i class="fa-solid fa-chevron-down nav__icon"></i>
                             </a>
                             <ul class="nav__submenu">
@@ -86,7 +86,7 @@
 
                         <li class="nav__item">
                             <a href="#" class="nav__title">
-                                Servicios
+                                Blog
                                 <i class="fa-solid fa-chevron-down nav__icon"></i>
                             </a>
                             <ul class="nav__submenu">
