--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 </header>
 
                 <ul class="projects__categories">
-                    <li class="categories__item">
+                    <li class="categories__item categories__item--active">
                         Todos los trabajos
                     </li>
 
