--- a/index.html
+++ b/index.html
@@ -698,13 +698,13 @@
             <div class="contact__container">
                 <header class="contact__header">
                     <h4 class="contact__subtitle">Trabajemos juntos</h4>
-                    <h2 class="contcat__title">¿Creamos tu nuevo proyecto?</h2>
+                    <h2 class="contact__title">¿Creamos tu nuevo proyecto?</h2>
 
                     <a class="contact__btn" href="#">Pedir presupuesto</a>
                 </header>
 
                 <div class="contact__images">
-                    <div class="contact__thumb">
+                    <div class="contact__thumb contact__thumb--chat">
                         <img class="contact__img" src="./assets/img/chat-group.png">
                     </div>
                     <div class="contact__thumb contact__thumb--laptop">
