--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
                         <div class="fleft__container">
                             <h2 class="fleft__title">Contactanos!</h2>
                             <p class="fleft__subtitle">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet consectetur tempore molestiae excepturi non placeat, deserunt blanditiis rerum iusto soluta vitae molestias ex! Architecto totam eligendi sequi expedita illum aut!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet consectetur tempore molestiae excepturi non placeat, deserunt blanditiis rerum iusto soluta vitae molestias ex! Architecto!
                             </p>
 
                             <form class="fleft__form">
@@ -826,7 +826,7 @@
                     </div>
 
                     <div class="footer__fright">
-                        <div class="footer__widget">
+                        <div class="footer__widget footer__widget--50">
                             <h6 class="widget__title">Servicios</h6>
                             <ul class="widget__list">
                                 <li class="widget__item">
@@ -848,7 +848,7 @@
                             </ul>
                         </div>
 
-                        <div class="footer__widget">
+                        <div class="footer__widget footer__widget--25">
                             <h6 class="widget__title">Recursos</h6>
                             <ul class="widget__list">
                                 <li class="widget__item">
@@ -865,7 +865,7 @@
                             </ul>
                         </div>
 
-                        <div class="footer__widget">
+                        <div class="footer__widget footer__widget--25">
                             <h6 class="widget__title">Soporte</h6>
                             <ul class="widget__list">
                                 <li class="widget__item">
