--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--Estilos-->    
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <!--JS-->
 </head>
 <body>
