--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <!--JS-->
+    <script src="./assets/js/menu-mobile.js"></script>
+    <script src="./assets/js/navbar-fixed.js"></script>
 </head>
-<body>
-    
+<body>    
     
     <!--MENU NAVEGACION RESPONSIVE-->
     <div class="menu-mobile">
@@ -92,7 +93,7 @@
                             Blog
                             <i class="fa-solid fa-chevron-down nav__icon"></i>
                         </a>
-                        <ul class="menu-mobile__submenu">
+                        <ul class="menu-mobile__submenu-mobile">
                             <li class="submenu-mobile__item">
                                 <a href="#" class="submenu-mobile__link">Blog</a>
                             </li>
